# horizon

./: .gitignore
client/: index.html
client/src/: App.tsx
client/src/pages/: HorizonDashboard.tsx
standalone/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  HorizonUTM.pro  PROJECT_STRUCTURE.txt  QUICK_START.md  README.md  create_stubs.sh  horizon_utm.db  verify_setup.bat
standalone/docs/: architecture.md  mvp_scope.md  phase2_plan.md
standalone/resources/database/: schema.sql
standalone/resources/styles/: dark_theme.qss
standalone/src/: main.cpp
standalone/src/application/controllers/: DataExportController.cpp  DataExportController.h  HardwareController.cpp  HardwareController.h  TestController.cpp  TestController.h
standalone/src/application/dto/: TestParametersDTO.h  TestResultDTO.cpp  TestResultDTO.h
standalone/src/core/: Config.cpp  Config.h  Constants.h  Logger.cpp  Logger.h
standalone/src/domain/entities/: Sample.cpp  Sample.h  Test.cpp  Test.h  TestMethod.cpp  TestMethod.h
standalone/src/domain/interfaces/: IExportService.h  ITestRepository.h  IUTMDriver.h
standalone/src/domain/services/: StressStrainCalculator.cpp  StressStrainCalculator.h  TestMethodValidator.cpp  TestMethodValidator.h
standalone/src/domain/value_objects/: MachineState.h  SensorData.h  TestResult.h
standalone/src/infrastructure/export/: CSVExportService.cpp  CSVExportService.h
standalone/src/infrastructure/hardware/: MockUTMDriver.cpp  MockUTMDriver.h
standalone/src/infrastructure/persistence/: DatabaseManager.cpp  DatabaseManager.h  SQLiteTestRepository.cpp  SQLiteTestRepository.h
standalone/src/presentation/: MainWindow.cpp  MainWindow.h
standalone/src/presentation/views/: DashboardView.cpp  DashboardView.h  ResultsView.cpp  ResultsView.h  SampleQueueView.cpp  SampleQueueView.h  SettingsDialog.cpp  SettingsDialog.h  TestConfigDialog.cpp  TestConfigDialog.h  TestDetailsDialog.cpp  TestDetailsDialog.h
standalone/src/presentation/widgets/: MetricWidget.cpp  MetricWidget.h  RealtimeChartWidget.cpp  RealtimeChartWidget.h  StatusIndicator.cpp  StatusIndicator.h
standalone/tests/: CMakeLists.txt
