# Tests CMakeLists.txt

enable_testing()
find_package(Qt6 REQUIRED COMPONENTS Test)

# Unit tests will be added here
# Example:
# add_executable(test_calculator test_calculator.cpp)
# target_link_libraries(test_calculator Qt6::Test HorizonUTM_lib)
# add_test(NAME test_calculator COMMAND test_calculator)
